# custom_win_install_winpe

./: app.hta  app2.html  steps.txt
mdt/: crud.py  database.py  main.py  models.py  pyproject.toml  schemas.py
